--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "thinkai/currency",
     "type": "library",
+    "description": "Hello World",
     "require-dev": {
         "phpunit/phpunit": "^9.4"
     },
@@ -11,5 +12,15 @@
             "email": "thinkfullstack@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "ThinkAi\\" : "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\" : "tests/"
+        }
+    }
 }
