--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "type": "library",
     "description": "Hello World",
     "require-dev": {
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "license": "MIT",
     "authors": [
